@@ -1,5 +1,7 @@
 2016-02-16  Carl Hetherington  <cth@carlh.net>
 
+	* Add option to auto-upload to TMS (#794).
+
 	* Version 2.6.21 released.
 
 2016-02-15  Carl Hetherington  <cth@carlh.net>
